[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/images/paper.png" type="Texture" id=1]
[ext_resource path="res://assets/images/scissors.png" type="Texture" id=2]
[ext_resource path="res://assets/images/rock.png" type="Texture" id=3]
[ext_resource path="res://scripts/moveSelector.gd" type="Script" id=4]
[ext_resource path="res://scripts/player.gd" type="Script" id=5]
[ext_resource path="res://assets/images/noSelect.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/pixel-operator/PixelOperator8-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/fonts/pixel-operator/PixelOperator.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/fonts/pixel-operator/PixelOperatorHBSC.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/images/selection.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 134.401, 129.991 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 35
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.0
margin_right = 1024.0
margin_bottom = 599.0
mouse_filter = 2
color = Color( 0.0627451, 0.592157, 0.694118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rock" type="Sprite" parent="."]
position = Vector2( 191.114, 436.341 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="Rock"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rock/Area2D"]
visible = false
shape = SubResource( 1 )

[node name="selected" type="Sprite" parent="Rock"]
visible = false
texture = ExtResource( 10 )

[node name="Paper" type="Sprite" parent="."]
position = Vector2( 519.372, 433.757 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Paper"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paper/Area2D"]
visible = false
shape = SubResource( 1 )

[node name="selected" type="Sprite" parent="Paper"]
visible = false
position = Vector2( 0.163086, -0.573883 )
texture = ExtResource( 10 )

[node name="Scissors" type="Sprite" parent="."]
position = Vector2( 839.876, 435.049 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Scissors"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scissors/Area2D"]
visible = false
shape = SubResource( 1 )

[node name="selected" type="Sprite" parent="Scissors"]
visible = false
position = Vector2( 1.47021, 0.17038 )
texture = ExtResource( 10 )

[node name="opponent" type="Sprite" parent="."]
position = Vector2( 514.822, 76.207 )
scale = Vector2( 0.468421, 0.454139 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="opponent"]
margin_left = 102.134
margin_top = -97.3271
margin_right = 435.134
margin_bottom = -23.3271
custom_fonts/font = SubResource( 2 )
text = "PlayerX"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Label" parent="."]
margin_left = 20.8078
margin_top = 40.3523
margin_right = 208.808
margin_bottom = 219.352
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timerLabel" type="Label" parent="timer"]
margin_left = -33.6012
margin_top = -41.4153
margin_right = 214.399
margin_bottom = 16.5847
custom_fonts/font = SubResource( 4 )
text = "Time Remaining"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timerObj" type="Timer" parent="timer"]

[node name="scoreBoard" type="Label" parent="."]
margin_left = 440.3
margin_top = 194.7
margin_right = 586.3
margin_bottom = 241.7
custom_fonts/font = SubResource( 5 )
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p1score" type="Label" parent="scoreBoard"]
margin_left = 50.9
margin_top = 33.25
margin_right = 90.9
margin_bottom = 111.25
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p2score" type="Label" parent="scoreBoard"]
margin_left = 51.3
margin_top = -58.8
margin_right = 91.3
margin_bottom = 24.2
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="_pressed" from="Rock/Area2D" to="." method="_on_select"]
[connection signal="_pressed" from="Paper/Area2D" to="." method="_on_select"]
[connection signal="_pressed" from="Scissors/Area2D" to="." method="_on_select"]
[connection signal="timeout" from="timer/timerObj" to="." method="_on_timerObj_timeout"]
